--- a/neuroConstruct/pythonScripts/README
+++ b/neuroConstruct/pythonScripts/README
@@ -1,3 +1,3 @@
 Some Python scripts for running the neuroConstruct project. 
 
-These scripts are currently just for testing purposes, and can change/vanish without notice...
+These scripts are currently just for testing purposes...
